trunk/Archive2/aa/e3595342a49efa/output
main.cpp: In function 'int main()':
main.cpp:11:5: error: expected '}' at end of input
     }
     ^
